--- a/Tarea1.html
+++ b/Tarea1.html
@@ -1,6 +1,64 @@
 <html>
     <body>
-        <table border = "1px" >
+        <table border = "1px" style = "border-collapse: collapse;">
+            <thead bgcolor = "#B3877F">
+                <tr>
+                    <td colspan="6" text align="center">HORARIO DE CLASES</td>
+                </tr>
+            </thead>
+            <tr>
+                <th>Hora</th>
+                <th>Lunes</th>
+                <th>Martes</th>
+                <th>Miércoles</th>
+                <th>Jueves</th>
+                <th>Viernes</th>
+            </tr>
+            <tr>
+                <th>7:00 - 8:30</th>
+                <td></td>
+                <td>Aprendizaje de Máquina e Inteligencia Artificial</td>
+                <td>Aprendizaje de Máquina e Inteligencia Artificial</td>
+                <td></td>
+                <td>Aprendizaje de Máquina e Inteligencia Artificial</td>
+            </tr>
+            <tr>
+                <th>8:30 - 10:00</th>
+                <td>Analítica y Visualización de Datos</td>
+                <td>Matemáticas Avanzadas para la Ciencia de Datos</td>
+                <td>Analítica y Visualización de Datos</td>
+                <td>Analítica y Visualización de Datos</td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>10:00 - 10:30</th>
+                <td colspan="5">Receso</td>
+            </tr>
+            <tr>
+                <th>10:30 - 12:00</th>
+                <td>Matemáticas Avanzadas para la Ciencia de Datos</td>
+                <td>Desarrollo de Aplicaciones Web</td>
+                <td>Desarrollo de Aplicaciones Web</td>
+                <td>Matemáticas Avanzadas para la Ciencia de Datos</td>
+                <td>Desarrollo de Aplicaciones Web</td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>12:00 : 1:30</th>
+                <td>Procesos Estocásticos</td>
+                <td>Procesos Estocásticos</td>
+                <td>Procesos Estocásticos</td>
+                <td>Procesos Estocásticos</td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>1:30 - 3:00</th>
+                <td>Minería de Datos</td>
+                <td>Minería de Datos</td>
+                <td></td>
+                <td>Minería de Datos</td>
+                <td></td>
+            </tr>
 
         </table>
     </body>
