--- a/Tarea1.html
+++ b/Tarea1.html
@@ -1,13 +1,14 @@
 <html>
     <body>
-        <table border = "1px" style = "border-collapse: collapse;">
-            <thead bgcolor = "#B3877F">
+        <table border = "1px" style = "border-collapse: collapse; text-align: center; font-family: Cambria;">
+            <thead style = "color: white; background-color: #614235">
                 <tr>
-                    <td colspan="6" text align="center">HORARIO DE CLASES</td>
+                    <td colspan="6" text align="center">HORARIO DE CLASES: Vélez Gallardo Diana María</td>
                 </tr>
             </thead>
-            <tr>
-                <th>Hora</th>
+            <tbody>
+            <tr style = "background-color:#B3877F;">
+                <th style= "width: 100px; height: 20px; background-color:#B3877F;" >Hora</th>
                 <th>Lunes</th>
                 <th>Martes</th>
                 <th>Miércoles</th>
@@ -15,50 +16,57 @@
                 <th>Viernes</th>
             </tr>
             <tr>
-                <th>7:00 - 8:30</th>
+                <th style = "background-color:#B3877F;">7:00 - 8:30</th>
                 <td></td>
-                <td>Aprendizaje de Máquina e Inteligencia Artificial</td>
-                <td>Aprendizaje de Máquina e Inteligencia Artificial</td>
+                <td style = "background-color:#a3928a;">Aprendizaje de Máquina e Inteligencia Artificial</td>
+                <td style = "background-color:#a3928a;">Aprendizaje de Máquina e Inteligencia Artificial</td>
                 <td></td>
-                <td>Aprendizaje de Máquina e Inteligencia Artificial</td>
+                <td style = "background-color:#a3928a;">Aprendizaje de Máquina e Inteligencia Artificial</td>
             </tr>
             <tr>
-                <th>8:30 - 10:00</th>
-                <td>Analítica y Visualización de Datos</td>
-                <td>Matemáticas Avanzadas para la Ciencia de Datos</td>
-                <td>Analítica y Visualización de Datos</td>
-                <td>Analítica y Visualización de Datos</td>
-                <td></td>
-            </tr>
-            <tr>
-                <th>10:00 - 10:30</th>
-                <td colspan="5">Receso</td>
-            </tr>
-            <tr>
-                <th>10:30 - 12:00</th>
-                <td>Matemáticas Avanzadas para la Ciencia de Datos</td>
-                <td>Desarrollo de Aplicaciones Web</td>
-                <td>Desarrollo de Aplicaciones Web</td>
-                <td>Matemáticas Avanzadas para la Ciencia de Datos</td>
-                <td>Desarrollo de Aplicaciones Web</td>
+                <th style = "background-color:#B3877F;">8:30 - 10:00</th>
+                <td style = "background-color:#c6bbb5;">Analítica y Visualización de Datos</td>
+                <td style = "background-color:#c49f8e;">Matemáticas Avanzadas para la Ciencia de Datos</td>
+                <td style = "background-color:#c6bbb5;">Analítica y Visualización de Datos</td>
+                <td style = "background-color:#c6bbb5;">Analítica y Visualización de Datos</td>
                 <td></td>
             </tr>
             <tr>
-                <th>12:00 : 1:30</th>
-                <td>Procesos Estocásticos</td>
-                <td>Procesos Estocásticos</td>
-                <td>Procesos Estocásticos</td>
-                <td>Procesos Estocásticos</td>
+                <th style = "background-color:#B3877F;">10:00 - 10:30</th>
+                <td style = "background-color:#B3877F;" colspan="5" text align="center">Receso</td>
+            </tr>
+            <tr>
+                <th style = "background-color:#B3877F;">10:30 - 12:00</th>
+                <td style = "background-color:#c49f8e;">Matemáticas Avanzadas para la Ciencia de Datos</td>
+                <td style = "background-color:#a98c80;">Desarrollo de Aplicaciones Web</td>
+                <td style = "background-color:#a98c80;">Desarrollo de Aplicaciones Web</td>
+                <td style = "background-color:#c49f8e;">Matemáticas Avanzadas para la Ciencia de Datos</td>
+                <td style = "background-color:#a98c80;">Desarrollo de Aplicaciones Web</td>
                 <td></td>
             </tr>
             <tr>
-                <th>1:30 - 3:00</th>
-                <td>Minería de Datos</td>
-                <td>Minería de Datos</td>
-                <td></td>
-                <td>Minería de Datos</td>
+                <th style = "background-color:#B3877F;">12:00 : 1:30</th>
+                <td style = "background-color:#7f736d;">Procesos Estocásticos</td>
+                <td style = "background-color:#7f736d;">Procesos Estocásticos</td>
+                <td style = "background-color:#7f736d;">Procesos Estocásticos</td>
+                <td style = "background-color:#7f736d;">Procesos Estocásticos</td>
+                <td style = "background-color:#c49f8e;">Matemáticas Avanzadas para la Ciencia de Datos</td>
                 <td></td>
             </tr>
+            <tr>
+                <th style = "background-color:#B3877F;">1:30 - 3:00</th>
+                <td style = "background-color:#ae806c;">Minería de Datos</td>
+                <td style = "background-color:#ae806c;">Minería de Datos</td>
+                <td></td>
+                <td style = "background-color:#ae806c;">Minería de Datos</td>
+                <td></td>
+            </tr>
+            </tbody>
+            <tfoot bgcolor = "#614235" text align = "center">
+                <tr>
+                    <td colspan="6" style="color: white">Horario Escolar para Quinto Semestre</td>
+                </tr>
+            </tfoot>
 
         </table>
     </body>
